2008-07-17	Nick Schermer <nick@xfce.org>

	* dialogs/display-settings/Makefile.am,
	  dialogs/accessibility-settings/Makefile.am,
	  dialogs/mouse-settings/Makefile.am,
	  dialogs/appearance-settings/Makefile.am,
	  dialogs/keyboard-settings/Makefile.am: Add --strip-comments 
	  --strip-content to exo-csource for generating glade headers.
	* configure.ac.in: Bump exo version to 0.3.7.1 since stripping
	  glade files on older versions is broken.

2008-07-17	Jannis Pohlmann <jannis@xfce.org>

	* dialogs/keyboard-settings/command-dialog.c: Make entry activate the
	  default widget of the dialog. Make GTK_RESPONSE_OK the default
	  dialog response.

2008-07-17	Jannis Pohlmann <jannis@xfce.org>

	* dialogs/accessibility-settings/accessibility-dialog.glade,
	  dialogs/appearance-settings/appearance-dialog.glade,
	  dialogs/display-settings/display-dialog.glade,
	  dialogs/keyboard-settings/keyboard-dialog.glade,
	  dialogs/mouse-settings/mouse-dialog.glade: Make all dialogs use
	  consistent borders/paddings/distances etc. again. Please keep it
	  this way when adding new dialogs/widgets.
	* dialogs/accesibility-settings/main.c, 
	  dialogs/keyboard-settings/main.c: Destroy GladeXML after the dialog
	  is destroyed. 

2008-07-16	Nick Schermer <nick@xfce.org>

	* Mv xfce4-settings-helper/xkb.* xfce4-settings-helper/keyboards.*:
	  Rename the files and change the internal names too. Settings
	  channel name renamed from 'xkb' to 'keyboards'.
	* Mv xfce4-settings-helper/accessx.* xfce4-settings-helper/accessibility.*:
	  Rename the files and change the internal names too. Settings
	  channel name renamed from 'accessx' to 'accessibility'.
	* xfce4-settings-helper/pointers.c: Rename the channel name from
	  'devices' to 'pointers'.
	* dialogs/keyboard-settings/main.c: Cleanup code.
	* dialogs/accessibility-settings/main.c: Cleanup code.
	* TODO: Add some stuff we need to take a look at.
	* dialogs/display-settings/: Update glade file and add a bit more code.