@@ -1,6 +1,7 @@
 Keyboard settings
 ------------------------------------------------------------------------
 
+  * Use XfceTitledDialog for the ShortcutDialog.
   * The default values of the sliders don't make sence. I think we should
     also show the slider value and add a tooltip to the slide what the
     value actually stands for, like in the mouse dialog.
